sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:10: error: type mismatch;
 found   : Unit
 required: Boolean
    }else if (i=0){
               ^